2011-11-08  Adam Klein  <adamk@chromium.org>

        Use a typedef for ExceptionCode in all header files instead of including ExceptionCode.h
        https://bugs.webkit.org/show_bug.cgi?id=71845

        Reviewed by Adam Barth.

        * src/SharedWorkerRepository.cpp:

2011-11-08  Fady Samuel  <fsamuel@chromium.org>

        Delete WebViewimpl::scalePage
        https://bugs.webkit.org/show_bug.cgi?id=71711

        Reviewed by Darin Fisher.

        Once this patch lands: http://codereview.chromium.org/8477033

        WebViewImpl::scalePage will no longer be used in Chromium and
        can safely be deleted.

        * public/WebView.h:
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:

2011-11-08  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: implement compound (array) key support
        https://bugs.webkit.org/show_bug.cgi?id=62284

        Reviewed by Tony Chang.

        Extend WebKit API to support Array values as IDBKeys.

        * public/WebIDBKey.h:
        * src/AssertMatchingEnums.cpp:
        * src/WebIDBKey.cpp:
        (WebKit::WebIDBKey::createArray):
        (WebKit::convertFromWebIDBKeyArray):
        (WebKit::convertToWebIDBKeyArray):
        (WebKit::WebIDBKey::assignArray):
        (WebKit::WebIDBKey::array):
        * tests/IDBBindingUtilitiesTest.cpp:
        (WebCore::TEST):
        * tests/IDBLevelDBCodingTest.cpp:
        (IDBLevelDBCoding::createArrayIDBKey):
        (IDBLevelDBCoding::TEST):
        (IDBLevelDBCoding::compareStrings):

2011-11-08  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: display notification in the front-end when inspected worker terminates
        https://bugs.webkit.org/show_bug.cgi?id=71770

        Exposed an API for the browser to notify inspector front-end when inspeced instance
        terminates. It is used now for tracking shared workers termination.

        Reviewed by Pavel Feldman.

        * public/WebDevToolsAgent.h:
        * src/WebDevToolsAgentImpl.cpp: